--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -2,6 +2,7 @@
   padding-bottom: 20px;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 20px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
